fix: Display Facebook social icon for improved visibility

--- a/assets/global/styles.css
+++ b/assets/global/styles.css
@@ -5555,7 +5555,7 @@ width: 100%;
 }
 
 .learnsimply-social-facebook .learnsimply-social-image {
-  display: none;
+  display: block;
 }
 
 .learnsimply-social-facebook .learnsimply-facebook-svg {
